[node-build-scripts] fix(generate-css-variables): whitespace in maps (#5991)

--- a/packages/node-build-scripts/src/__tests__/__fixtures__/expected/variables.less
+++ b/packages/node-build-scripts/src/__tests__/__fixtures__/expected/variables.less
@@ -23,4 +23,5 @@
 @test-map: {
   first: #111418;
   second: #ffffff;
+  third: #5f6b7c;
 };
